--- a/app/src/main/res/layout/bottom_pannel.xml
+++ b/app/src/main/res/layout/bottom_pannel.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/avatarImageView"
+        android:id="@+id/avatarImageButon"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentLeft="true"
@@ -15,8 +15,8 @@
         android:id="@+id/levelTextView"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/avatarImageView"
-        android:layout_toEndOf="@id/avatarImageView"
+        android:layout_toRightOf="@id/avatarImageButon"
+        android:layout_toEndOf="@id/avatarImageButon"
         android:layout_marginTop="10dp"
         android:text="Level 1"
         android:textSize="20sp"
@@ -27,8 +27,8 @@
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/avatarImageView"
-        android:layout_toEndOf="@id/avatarImageView"
+        android:layout_toRightOf="@id/avatarImageButon"
+        android:layout_toEndOf="@id/avatarImageButon"
         android:layout_below="@id/levelTextView"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
