--- a/app/src/main/res/layout/bottom_panel_start_run.xml
+++ b/app/src/main/res/layout/bottom_panel_start_run.xml
@@ -1,98 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/StartRunConstraintLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
 
     <TextView
         android:id="@+id/distanceText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Distance:"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginEnd="20dp"
-        android:textSize="20sp"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Distance"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/timeElapsed"
+        app:layout_constraintEnd_toStartOf="@+id/timeElapsed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/timeElapsed" />
 
     <TextView
         android:id="@+id/distanceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/distanceText"
-        android:layout_toEndOf="@id/distanceText"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="8dp"
         android:text="0.00"
-        android:textSize="20sp"/>
+        android:textColor="@color/colorGarnet"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="@+id/distanceText"
+        app:layout_constraintStart_toStartOf="@+id/distanceText"
+        app:layout_constraintTop_toBottomOf="@+id/distanceText" />
 
     <TextView
         android:id="@+id/timeElapsed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/distanceText"
-        android:text="Time:"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginEnd="20dp"
-        android:textSize="20sp"/>
+        android:layout_marginTop="24dp"
+        android:text="Time"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/distanceText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/timeElapsedTextVIew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/distanceText"
-        android:layout_toRightOf="@id/timeElapsed"
-        android:layout_toEndOf="@id/distanceText"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="8dp"
         android:text="0.00"
-        android:textSize="20sp"/>
+        android:textColor="@color/colorGarnet"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="@+id/timeElapsed"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="@+id/timeElapsed"
+        app:layout_constraintTop_toBottomOf="@+id/timeElapsed" />
 
     <TextView
         android:id="@+id/expTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="0.00"
-        android:textSize="20sp"/>
+        android:textColor="@color/colorGarnet"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/endButton"
+        app:layout_constraintEnd_toEndOf="@+id/expText"
+        app:layout_constraintStart_toStartOf="@+id/expText"
+        app:layout_constraintTop_toBottomOf="@+id/expText" />
 
     <TextView
         android:id="@+id/expText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@id/expTextView"
-        android:layout_alignLeft="@id/expTextView"
-        android:layout_marginStart="-65dp"
-        android:layout_marginLeft="-65dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="EXP:"
-        android:textSize="20sp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="EXP"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/timeElapsed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/timeElapsed"
+        app:layout_constraintTop_toTopOf="@+id/timeElapsed" />
 
     <Button
         android:id="@+id/endButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/expTextView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:paddingLeft="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+
+        android:layout_marginRight="8dp"
+        android:background="@drawable/button_background_gold"
+        android:fontFamily="monospace"
         android:paddingStart="10dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         android:paddingEnd="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
+        android:paddingRight="10dp"
+        android:text="Finish!"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timeElapsedTextVIew" />
 
-        android:text="End Run"/>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
