--- a/app/src/main/res/layout/main_ui.xml
+++ b/app/src/main/res/layout/main_ui.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_ui"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/topPanel"
         android:layout_width="match_parent"
-        android:layout_height="600dp" />
+        android:layout_height="0dp"
+        android:layout_weight="8" />
 
     <FrameLayout
         android:id="@+id/bottomPanel"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_below="@id/topPanel"/>
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_weight=".5" />
+</LinearLayout>
