--- a/app/src/main/res/layout/initial_login.xml
+++ b/app/src/main/res/layout/initial_login.xml
@@ -1,46 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp" android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/InitialLoginConstraintLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp">
 
     <EditText
         android:id="@+id/nameEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="100dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
-        android:padding="10dp"
         android:fontFamily="monospace"
         android:hint="Enter your username"
         android:inputType="textPersonName"
-        android:textSize="20sp" />
+        android:padding="10dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_conversion_wrapHeight="131"
+        tools:layout_conversion_wrapWidth="974" />
 
     <EditText
-        android:layout_marginTop="15dp"
-        android:padding="10dp"
-        android:background="@drawable/edit_text_background"
         android:id="@+id/weightEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@id/nameEditText"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/edit_text_background"
         android:ems="10"
         android:fontFamily="monospace"
         android:hint="Enter your current weight"
         android:inputType="number"
-        android:textSize="20sp" />
+        android:padding="10dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nameEditText"
+        tools:layout_conversion_wrapHeight="131"
+        tools:layout_conversion_wrapWidth="974" />
 
     <Button
-        android:layout_centerInParent="true"
         android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
+        android:layout_centerHorizontal="true"
 
-        android:padding="10dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/button_background_gold"
         android:fontFamily="monospace"
-        android:text="Create avatar" />
+        android:padding="10dp"
+        android:text="Create Avatar"
+        android:textAllCaps="false"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.525"
+        tools:layout_conversion_wrapHeight="126"
+        tools:layout_conversion_wrapWidth="338" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/uploadImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_background_garnet"
+        android:fontFamily="monospace"
+        android:padding="10dp"
+        android:text="Upload Image"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/submitButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weightEditText"
+        app:layout_constraintVertical_bias="0.474"
+        tools:layout_conversion_wrapHeight="126"
+        tools:layout_conversion_wrapWidth="231" />
+
+    <ImageView
+        android:id="@+id/avatarImagePreview"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:background="@drawable/button_border_selector"
+        app:layout_constraintBottom_toBottomOf="@+id/uploadImageButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/uploadImageButton" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
