Functional profile page and past runs fragment

--- a/app/src/main/res/layout/fragment_past_runs.xml
+++ b/app/src/main/res/layout/fragment_past_runs.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".PastRunsFragment">
 
-    <RelativeLayout
+    <ListView
+        android:layout_gravity="center_horizontal|top"
+        android:id="@+id/userProfile_pastRuns_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/past_runs"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </RelativeLayout>
-</ScrollView>
+</FrameLayout>
