--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -10,32 +10,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:id="@+id/row_avatar"
+        android:id="@+id/userProfile_row_avatar"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageButton
+            android:id="@+id/userProfile_avatar"
             android:contentDescription="User avatar"
             android:layout_height="96dp"
             android:layout_width="96dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"/>
         <TextView
+            android:id="@+id/userProfile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User Name"
             android:textSize="28sp"/>
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/row_weight"
-        android:layout_below="@id/row_avatar"
+        android:id="@+id/userProfile_row_weight"
+        android:layout_below="@id/userProfile_row_avatar"
         android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
@@ -51,12 +49,13 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:textSize="30sp"
+            android:id="@+id/userProfile_weight"
             android:text="160 lbs"/>
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/row_stats"
-        android:layout_below="@id/row_weight"
+        android:id="@+id/userProfile_row_stats"
+        android:layout_below="@id/userProfile_row_weight"
         android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
@@ -72,15 +71,16 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:textSize="30sp"
+            android:id="@+id/userProfile_totalMilesRan"
             android:text="17301 mi"/>
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/row_widget"
+        android:id="@+id/userProfile_row_widget"
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/row_stats"
+        android:layout_below="@+id/userProfile_row_stats"
         >
     </FrameLayout>
 
