--- a/app/src/main/res/layout/fragment_user_profile_bottom_panel.xml
+++ b/app/src/main/res/layout/fragment_user_profile_bottom_panel.xml
@@ -12,12 +12,26 @@
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/switch_close"
+            android:background="@drawable/button_background_gold"
+            android:fontFamily="monospace"
+            android:textSize="20sp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Close" />
         <Button
             android:id="@+id/switch_runs"
+            android:background="@drawable/button_background_gold"
+            android:fontFamily="monospace"
+            android:textSize="20sp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,6 +39,13 @@
 
         <Button
             android:id="@+id/switch_graph"
+            android:background="@drawable/button_background_gold"
+            android:fontFamily="monospace"
+            android:textSize="20sp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
