--- a/app/src/main/res/layout/fragment_user_profile_bottom_panel.xml
+++ b/app/src/main/res/layout/fragment_user_profile_bottom_panel.xml
@@ -6,6 +6,11 @@
     tools:context=".UserProfileBottomPanel">
 
     <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="5sp"
+        android:layout_marginStart="5sp"
+        android:layout_marginRight="5sp"
+        android:layout_marginEnd="5sp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_width="match_parent"
