adjusted things back to meters and added a spot to show level

--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".UserProfile"
     android:paddingLeft="10dp"
@@ -34,6 +35,15 @@
             android:layout_height="wrap_content"
             android:text="User Name"
             android:textSize="34sp"/>
+
+        <TextView
+            android:id="@+id/levelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:text="LEVEL"
+            app:fontFamily="monospace" />
     </LinearLayout>
 
     <LinearLayout
